data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1829.wast
;; 10. **Test Description**: Fabricate a block structure with mismatched stack unwinding after a branch to check if `wizard_engine` mishandles stack state transitions by resolving to incorrect block.     - **Constraint**: Confirm branches correctly unwind the stack to match the block type's requirement.     - **Relation**: Examines stack operations' consistency combined with branch target resolution within blocks.

(assert_invalid
  (module
    (func $mismatched-stack-unwind (result i32)
      (block (result i32)
        (block (result f64)
          (br 1 (i32.const 42))
        )
      )
    )
  )
  "type mismatch"
)